--- a/popup.html
+++ b/popup.html
@@ -2,48 +2,44 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>AI Blocker</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      text-align: center;
-      background: linear-gradient(135deg, #1e1e1e, #2c2c2c);
-      color: #fff;
       margin: 0;
       padding: 20px;
-      width: 300px;
-      border-radius: 8px;
+      background-color: #f5f5f5;
+      color: #333;
     }
-
-    h2 {
-      margin: 10px 0;
-      font-size: 1.6em;
-      color: #4CAF50;
+    h1 {
+      font-size: 1.5em;
+      color: #333;
+      text-align: center;
     }
-
-    p {
+    button {
+      width: 100%;
+      padding: 10px;
+      margin-top: 10px;
+      border: none;
+      border-radius: 5px;
       font-size: 1em;
-      margin: 10px 0 20px;
-      color: #ccc;
+      cursor: pointer;
     }
-
-    a {
-      text-decoration: none;
-      background-color: #4CAF50;
-      color: #fff;
-      padding: 10px 15px;
-      border-radius: 6px;
-      transition: background 0.3s ease;
+    .toggle-blocking {
+      background-color: #4caf50;
+      color: white;
     }
-
-    a:hover {
-      background-color: #388E3C;
+    .manage-blocklist {
+      background-color: #2196f3;
+      color: white;
     }
   </style>
 </head>
 <body>
-  <h2>AI Blocker</h2>
-  <p>Manage your blocklist and allowlist easily.</p>
-  <a href="options.html" target="_blank">Open Settings</a>
+  <h1>AI Blocker</h1>
+  <button class="toggle-blocking">Toggle Blocking</button>
+  <button class="manage-blocklist">Manage Blocklist</button>
+  <script src="popup.js"></script>
 </body>
 </html>
